tests/fixtures/invalid/pow_str_float_list.py
# Cannot call pow() with Str, Float, List[int]
x = pow("hello", 1.0, [1, 2, 3])
